feat: 🎸 update server zjuer
