# packages/server/libs/zjuer/src/index.ts
@@ -1,0 +1,2 @@
+export * from './zjuer.module';
+export * from './zjuer.service';
