# packages/server/libs/zjuer/src/zjuer.module.ts
@@ -1,0 +1,10 @@
+import { Module } from '@nestjs/common';
+import { ZjuerService } from './zjuer.service';
+import { ZjuerController } from './zjuer.controller';
+
+@Module({
+    controllers: [ZjuerController],
+    providers: [ZjuerService],
+    exports: [ZjuerService],
+})
+export class ZjuerModule {}
